--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a'
+            universalApk true
+        }
+    }
 }
 
 dependencies {
@@ -46,9 +56,14 @@ dependencies {
     implementation 'com.daimajia.slider:library:1.1.5@aar'
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
-    implementation 'com.github.bluzwong:swipeback:0.2.0@aar'
     implementation 'com.kyleduo.switchbutton:library:2.0.0'
 
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    //implementation 'com.github.tcking:giraffeplayer2:0.1.19'
+    implementation 'cn.jzvd:jiaozivideoplayer:6.2.8'
+    implementation 'me.samthompson:bubble-actions:1.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
 
 }
+
