--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.vacuum.app.cinema">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 
     <application
@@ -24,7 +25,11 @@
         </activity>
 
         <activity android:name=".Fragments.AboutUsActivity"/>
-
+        <activity
+            android:name=".Activities.WatchActivity"
+            android:screenOrientation="landscape"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            />
 
     </application>
 
