--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.8'
     implementation 'me.samthompson:bubble-actions:1.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
 
 }
