--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity
             android:screenOrientation="portrait"
             android:name=".MainActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +31,9 @@
         <activity
             android:name=".Activities.WatchActivity"
             android:screenOrientation="landscape"
-            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="my_player_activity"
+            android:configChanges="orientation|keyboardHidden|screenLayout|screenSize"
+            android:theme="@style/AppTheme"
             />
 
     </application>
