--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.vacuum.app.cinema">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
@@ -32,7 +32,7 @@
             android:name=".Activities.WatchActivity"
             android:screenOrientation="landscape"
             android:label="my_player_activity"
-            android:configChanges="orientation|keyboardHidden|screenLayout|screenSize"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppTheme"
             />
 
