--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,19 @@ android {
         }
     }
 
-    /*splits {
+    lintOptions {
+
+        checkReleaseBuilds false
+
+    }
+    splits {
         abi {
             enable true
             reset()
             include 'x86', 'armeabi-v7a'
             universalApk true
         }
-    }*/
+    }
 }
 
 dependencies {
