--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,18 +23,16 @@ android {
     }
 
     lintOptions {
-
         checkReleaseBuilds false
-
     }
-    splits {
+    /*splits {
         abi {
             enable true
             reset()
             include 'x86', 'armeabi-v7a'
             universalApk true
         }
-    }
+    }*/
 }
 
 dependencies {
