--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'com.github.halilozercan:BetterVideoPlayer:1.1.0'
+    implementation 'com.airbnb.android:lottie:2.5.1'
 
 
 
