Splash screen alwyse on portirait mode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
             android:name=".MainActivity">
             <!--android:windowSoftInputMode="adjustPan|stateAlwaysHidden"-->
         </activity>
-        <activity android:name=".Splash.SplashScreen">
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".Splash.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
