--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ apply plugin: 'io.fabric'
 
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key()'
+            keyPassword 'asdfghASDFGH2010'
+            storeFile file('E:/Other files/Rob Percival/signature file/signature.jks')
+            storePassword 'asdfghASDFGH2010'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.vacuum.app.cinema"
@@ -44,25 +52,19 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:11.8.0'
     implementation 'com.google.firebase:firebase-ads:11.8.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.1'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
-
     implementation 'org.jsoup:jsoup:1.11.2'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
-
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.8'
     implementation 'me.samthompson:bubble-actions:1.3.0'
@@ -71,8 +73,6 @@ dependencies {
     implementation 'com.github.halilozercan:BetterVideoPlayer:1.1.0'
     implementation 'com.airbnb.android:lottie:2.5.1'
     implementation 'me.relex:circleindicator:1.2.2@aar'
-
-
 }
 
 
